# notrace-browser

./: .gitignore  Cargo.toml  Package.swift  README.md  README.zh-CN.md
.github/workflows/: ci.yml
Sources/ChatGPTCloakAccountPicker/: main.swift
Sources/ChatGPTCloakLauncher/: main.swift
cloak-picker/: index.html  package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
cloak-picker/src/: App.tsx  styles.css
cloak-picker/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
cloak-picker/src-tauri/capabilities/: default.json
cloak-picker/src-tauri/permissions/: account-commands.toml
cloak-picker/src-tauri/src/: lib.rs  main.rs
cloak-picker/tests/: App.test.tsx
crates/cloak-cli/: Cargo.toml
crates/cloak-cli/src/: main.rs
crates/cloak-core/: Cargo.toml
crates/cloak-core/src/: lib.rs  relay.rs
extension/cloak-companion/: account-seed-main.js  apply.js  background.js  manifest.json  popup.html  popup.js  seed.js  spoof.js  startup-recovery.js
packaging/: check-picker-fresh.sh  icon-cloak-picker.icns  icon-green.icns  install-cloak-picker-app.sh  install-local-app.sh  install-updater.sh  launch-account.sh  make-account-app.sh  make-app.sh  patch-chromium.sh  pick-account.sh  proxy-relay.py  rollback-chromium.sh  set-pwa-icon.sh  test-patch-chromium.sh  test-rollback-chromium.sh  test-update-pin.sh  update-chromium.sh  verify-challenge-contract.sh
selftest/: challenge-signals.mjs  challenge-signals.test.mjs  probe.html  run-live-challenge-audit.mjs  run-selftest.mjs  startup-recovery.test.mjs
