[workspace]
members = [
    "crates/cloak-core",
    "crates/cloak-cli",
    "cloak-picker/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
rand = "0.8"
percent-encoding = "2.3"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
rustls = "0.23"
rustls-pki-types = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.42", features = ["io-util", "net", "rt-multi-thread", "time"] }
tokio-rustls = "0.26"
url = "2.5"
walkdir = "2.5"
webpki-roots = "1.0"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
