[package]
name = "cloak-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
dirs.workspace = true
percent-encoding.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
url.workspace = true
walkdir.workspace = true
webpki-roots.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile = "3.10"
